--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.9.3"
   },
   "dependencies": {
