backend finished + dockerized

--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,10 @@
 # In this situation where an interviewer wants to get set up quickly to evaluate a challenge, this is much easier for the interviewer.
 
 PORT=3001
-PGUSER="postgres"
-PGHOST="PG HOST NAME"
-PGDATABASE="postgres"
-PGPASSWORD="PG PASSWORD"
-PGPORT="5432"
+POSTGRES_USER="postgres"
+POSTGRES_HOST="host.docker.internal"
+POSTGRES_DATABASE="postgres"
+POSTGRES_PASSWORD="Password1234"
+POSTGRES_PORT="5432"
+POSTGRES_ADMIN_EMAIL="austinmosesdev@gmail.com"
+POSTGRES_ADMIN_PASSWORD="Password1234"
