--- a/backend/package.json
+++ b/backend/package.json
@@ -4,22 +4,25 @@
   "description": "sagely challenge backend",
   "main": "index.ts",
   "scripts": {
+    "build": "npx tsc",
     "test": "test",
-    "serve": "nodemon app.ts",
-    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
+    "start": "nodemon src/index.ts",
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "compose:up": "docker-compose up --build -d",
+    "compose:down": "docker-compose down --remove-orphans",
+    "migration:generate": "typeorm migration:generate -d src/db/database.ts",
+    "migration:up": "typeorm migration:run -d src/db/database.ts",
+    "migration:down": "typeorm migration:revert -d src/db/database.ts"
   },
   "author": "Austin Moses",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
-    "@types/helmet": "^4.0.0",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.9.3"
   },
   "dependencies": {
@@ -27,9 +30,12 @@
     "cors": "^2.8.5",
     "csv": "^6.2.3",
     "dotenv": "^16.0.3",
+    "eslint": "^8.28.0",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.10",
     "uuid4": "^2.0.3"
   }
 }
