--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "npx tsc",
-    "test": "test",
+    "test": "mocha -r ts-node/register 'src/test/*.test.ts'",
     "start": "nodemon src/index.ts",
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
     "compose:up": "docker-compose up --build -d",
@@ -17,24 +17,35 @@
   "author": "Austin Moses",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
+    "@types/sinon": "^10.0.13",
+    "@types/uuid4": "^2.0.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/register": "^7.18.9",
     "@types/pg": "^8.6.5",
+    "chai": "^4.3.7",
     "cors": "^2.8.5",
     "csv": "^6.2.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.28.0",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
+    "mocha": "^10.1.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
+    "sinon": "^14.0.2",
     "typeorm": "^0.3.10",
     "uuid4": "^2.0.3"
   }
