updated emails for pgadmin

--- a/backend/.env
+++ b/backend/.env
@@ -7,5 +7,5 @@ POSTGRES_HOST="host.docker.internal"
 POSTGRES_DATABASE="postgres"
 POSTGRES_PASSWORD="Password1234"
 POSTGRES_PORT="5432"
-POSTGRES_ADMIN_EMAIL="austinmosesdev@gmail.com"
+POSTGRES_ADMIN_EMAIL="test@test.com"
 POSTGRES_ADMIN_PASSWORD="Password1234"
